Fix filter overlap issues (#141)

--- a/chemistry/chemistry_system/static/css/site.css
+++ b/chemistry/chemistry_system/static/css/site.css
@@ -335,26 +335,6 @@ input[type="file"] {
     width: 75%;
   }
 
-  input[type="checkbox"] {
-    display: none;
-  }
-
-  input[type="checkbox"]:checked ~ span:nth-of-type(1) {
-    transform-origin: bottom;
-    transform: rotate(45deg) translate(8px, 0px);
-  }
-
-  input[type="checkbox"]:checked ~ span:nth-of-type(2) {
-    transform-origin: top;
-    transform: rotate(-45deg);
-  }
-
-  input[type="checkbox"]:checked ~ span:nth-of-type(3) {
-    transform-origin: bottom;
-    width: 50%;
-    transform: translate(30px, -11px) rotate(45deg);
-  }
-
   .results-table tbody tr {
     background: #fff; /* Ensure rows are white */
     border: 1px solid #ddd; /* Keep borders if needed */
